--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
@@ -27,8 +26,7 @@
     "react-native-switch-selector": "^2.1.4",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
